--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HommeWork-1</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <a>
-        <span>Web</span>
-        <span>Studio</span>
-      </a>
+      <a href="./index.html" class="logo-header"> <span class="logo-web">Web</span>Studio </a>
       <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="header-links">
+          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contacts">
+        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link"href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
     <main>
       <section>
@@ -28,7 +32,7 @@
         <button type="button">Заказать услугу</button>
       </section>
       <section>
-        <h2 hidden></h2>
+        <h2 hidden>Заголовок</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -89,10 +93,7 @@
         </ul>
       </section>
       <footer>
-        <a>
-          <span>Web</span>
-          <span>Studio</span>
-        </a>
+        <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio </a>
         <address>
           <a href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
