--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <a href="./index.html" class="logo-header"> <span class="logo-web">Web</span>Studio </a>
       <nav>
-        <ul class="header-links">
+        <ul class="header-links list">
           <li><a class="link" href="./index.html">Студия</a></li>
           <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
@@ -33,7 +33,7 @@
       </section>
       <section>
         <h2 hidden>Заголовок</h2>
-        <ul>
+        <ul class="features list">
           <li>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -54,7 +54,7 @@
       </section>
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/web_developing.png" height="294" width="370" alt="web developing" />
           </li>
@@ -68,7 +68,7 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list" >
           <li>
             <img src="./images/igor_demianenko.jpg" height="260" width="270" alt="Igor Demianenko" />
 
@@ -95,9 +95,11 @@
       <footer>
         <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio </a>
         <address>
-          <a href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
+          <ul class="footer-contacts list">
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
         </address>
       </footer>
     </main>
