--- a/portfolio.html
+++ b/portfolio.html
@@ -13,17 +13,17 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"> <span>Web</span>Studio </a>
+      <a href="./index.html" class="logo-header"> <span class="logo-web">Web</span>Studio </a>
       <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="header-links list">
+          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contacts">
+        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
     <main>
@@ -36,7 +36,7 @@
         <button type="button">Маркетинг</button>
       </div>
       <section>
-        <ul>
+        <ul class="list" >
           <li>
             <img src="./images/webside.jpg" width="370px" height="294px" alt="webside" />
             <h2>Технокряк</h2>
@@ -106,11 +106,13 @@
       </section>
 
       <footer>
-        <a href="./index.html"> <span>Web</span>Studio </a>
+        <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio </a>
         <address>
-          <a href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
+          <ul class="footer-contacts list">
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
         </address>
       </footer>
     </main>
