validation error fix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
       <div class="header-contacts">
         <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link"href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
     <main>
@@ -68,7 +68,7 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <ul class="list" >
+        <ul class="list">
           <li>
             <img src="./images/igor_demianenko.jpg" height="260" width="270" alt="Igor Demianenko" />
 
@@ -95,7 +95,9 @@
       <footer>
         <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio </a>
         <address>
-          <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
+          <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9">
+            г. Киев, пр-т Леси Украинки, 26</a
+          >
           <ul class="footer-contacts list">
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
