--- a/portfolio.html
+++ b/portfolio.html
@@ -38,41 +38,41 @@
       <section>
         <ul class="list" >
           <li>
-            <img src="./images/webside.jpg" width="370px" height="294px" alt="webside" />
+            <img src="./images/webside.jpg" width="370" height="294" alt="webside" />
             <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img
               src="./images/designe_new_orlean_vs_golden_star.jpg"
-              width="370px"
-              height="294px"
+              width="370"
+              height="294"
               alt="designe_new_orlean_vs_golden_star"
             />
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/application_seafood.jpg" width="370px" height="294px" alt="application_seafood" />
+            <img src="./images/application_seafood.jpg" width="370" height="294" alt="application_seafood" />
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/marketing_prime.jpg" width="370px" height="294px" alt="marketing_prime" />
+            <img src="./images/marketing_prime.jpg" width="370" height="294" alt="marketing_prime" />
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/application_boxes.jpg" width="370px" height="294px" alt="application_boxes" />
+            <img src="./images/application_boxes.jpg" width="370" height="294" alt="application_boxes" />
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
           <li>
             <img
-              src="./images/webside_inspirstion has no borders.jpg"
-              width="370px"
-              height="294px"
-              alt="webside_inspirstion has no borders"
+              src="./images/webside_inspirstion_has_no_borders.jpg"
+              width="370"
+              height="294"
+              alt="webside_inspirstion_has_no_borders"
             />
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
@@ -80,23 +80,23 @@
           <li>
             <img
               src="./images/designe_limited_edition.jpg"
-              width="370px"
-              height="294px"
+              width="370"
+              height="294"
               alt="designe_limited_edition"
             />
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/marketing_LAB.jpg" width="370px" height="294px" alt="marketing_LAB" />
+            <img src="./images/marketing_LAB.jpg" width="370" height="294" alt="marketing_LAB" />
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img
               src="./images/application_growing_business.jpg"
-              width="370px"
-              height="294px"
+              width="370"
+              height="294"
               alt="application_growing_business"
             />
             <h2>Growing Business</h2>
