--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -16,38 +21,38 @@
       <a href="./index.html" class="logo-header"> <span class="logo-web">Web</span>Studio </a>
       <nav>
         <ul class="header-links list">
-          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link active" href="./index.html">Студия</a></li>
           <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <div class="header-contacts">
-        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul class="header-contacts list">
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="order-btn" type="button">Заказать услугу</button>
       </section>
       <section>
         <h2 hidden>Заголовок</h2>
         <ul class="features list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="feature-title">Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="feature-title">Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="feature-title">Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="feature-title">Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
@@ -68,7 +73,7 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <ul class="list">
+        <ul class="our-team list">
           <li>
             <img src="./images/igor_demianenko.jpg" height="260" width="270" alt="Igor Demianenko" />
 
@@ -92,7 +97,7 @@
           </li>
         </ul>
       </section>
-      <footer>
+      <footer class="footer">
         <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio </a>
         <address>
           <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9">
