--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -17,26 +22,26 @@
       <nav>
         <ul class="header-links list">
           <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link active" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <div class="header-contacts">
-        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul class="header-contacts list">
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-      <h1 hidden>Портфолио веб-страници</h1>
-      <div>
-        <button type="button">Все</button>
-        <button type="button">Веб-сайты</button>
-        <button type="button">Приложения</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
-      </div>
       <section>
-        <ul class="list" >
+        <h1 hidden>Портфолио веб-страницы</h1>
+        <ul class="list">
+          <li><button class="filter-btn" type="button">Все</button></li>
+          <li><button class="filter-btn" type="button">Веб-сайты</button></li>
+          <li><button class="filter-btn" type="button">Приложения</button></li>
+          <li><button class="filter-btn" type="button">Дизайн</button></li>
+          <li><button class="filter-btn" type="button">Маркетинг</button></li>
+        </ul>
+        <ul class="our-projects list">
           <li>
             <img src="./images/webside.jpg" width="370" height="294" alt="webside" />
             <h2>Технокряк</h2>
@@ -78,12 +83,7 @@
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/designe_limited_edition.jpg"
-              width="370"
-              height="294"
-              alt="designe_limited_edition"
-            />
+            <img src="./images/designe_limited_edition.jpg" width="370" height="294" alt="designe_limited_edition" />
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
@@ -105,10 +105,12 @@
         </ul>
       </section>
 
-      <footer>
+      <footer class="footer">
         <a href="./index.html" class="logo-footer"> <span class="logo-web">Web</span>Studio </a>
         <address>
-          <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9"> г. Киев, пр-т Леси Украинки, 26</a>
+          <a class="footer-address link" href="https://goo.gl/maps/AGsCHTXERUsmSmET9">
+            г. Киев, пр-т Леси Украинки, 26</a
+          >
           <ul class="footer-contacts list">
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
